# BITS_Mtech

./: END2_Session_4_BucketIterator.ipynb  Group73_Breast_Cancer_Wisconsin.ipynb  README.md  dummy.ipynb  echo_score.py  training_weatherprediction.ipynb
Assignment1/: diagonally_dominant_matrix_Q21.py  (+2 more)
MLOPS/Session4/: .gitignore  Dockerfile  Readme.md  pyproject.toml  requirements.txt
MLOPS/Session4/src/: eval.py  infer.py  train.py
MLOPS/Session4/src/datamodules/: dog_datamodule.py
MLOPS/Session4/src/models/: dog_classifier.py
MLOPS/Session4/src/utils/: logging.py
MLOPS/Session5/: .coverage  .gitignore  Dockerfile  Readme.md  pyproject.toml  pytest.ini  requirements.txt
MLOPS/Session5/.github/workflows/: ci.yml
MLOPS/Session5/configs/: eval.yaml  infer.yaml  train.yaml
MLOPS/Session5/configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml
MLOPS/Session5/configs/data/: dogbreed.yaml
MLOPS/Session5/configs/experiment/: dog_ex.yaml
MLOPS/Session5/configs/hydra/: default.yaml
MLOPS/Session5/configs/logger/: csv.yaml  default.yaml
MLOPS/Session5/configs/model/: dog_classifier.yaml
MLOPS/Session5/configs/paths/: default.yaml
MLOPS/Session5/configs/trainer/: default.yaml
MLOPS/Session5/src/: eval.py  infer.py  train.py
MLOPS/Session5/src/datamodules/: dog_datamodule.py
MLOPS/Session5/src/models/: dog_classifier.py
MLOPS/Session5/src/utils/: logging.py  rich_utils.py
MLOPS/Session5/tests/: conftest.py  test_dog_classifier.py  test_dog_datamodule.py  test_eval.py  test_infer.py  test_train.py
(+59 files in other folders)
