[project]
name = "emlo04-session-04-siddharthvij10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "gdown>=5.2.0",
    "lightning[extra]>=2.4.0",
    "loguru>=0.7.2",
    "rich>=13.9.2",
    "tensorboard>=2.18.0",
    "timm>=1.0.9",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]
